--- a/login.css
+++ b/login.css
@@ -2,14 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: "Poppins",serif;
+    font: "Poppins", sans-serif;
 }
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right,#e2e2e2,#c9d6ff);
+    background: url('bg.avif') no-repeat center center/cover;
     color: #333;
 }
 .container {
@@ -19,7 +19,9 @@ body {
     width: 100%;
     max-width: 450px;
     padding: 30px;
-    background: white;
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(12px);
+    border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     display: none;
@@ -31,41 +33,47 @@ h2 {
     font-size: 34px;
     text-align: center;
     margin-bottom: 20px;
+    color: white;
 }
 input {
     width: 100%;
     padding: 12px;
-    background: #eee;
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 6px;
     border: none;
     outline: none;
     font-size: 16px;
-    color: #333;
+    color: white;
     margin-bottom: 20px;
+}
+input::placeholder{
+    color:#fff;
 }
 button {
     width: 100%;
     padding: 12px;
-    background: #7494ec;
+    background: #fff;
     border-radius: 6px;
     border: none;
     cursor: pointer;
     font-size: 16px;
-    color: #fff;
+    color: black;
     font-weight: 500;
     margin-bottom: 20px;
     transition: 0.5s;
 }
 button:hover {
-    background: #6884d3;
+    background: #d5d5d5;
 }
 p {
     font-size: 14.5px;
     text-align: center;
     margin-bottom: 10px;
+    color: white;
 }
 p a {
-    color: #7494ec;
+    color: #fff;
+    font-weight: bold;
     text-decoration: none;
 }
 p a:hover {
